# PeopleCounting-NVIDIADeepStream_Application

./: .gitignore  CMakeLists.txt  Makefile  README.md  analytics_utils.cpp  analytics_utils.h  ds_cfg_amqp.txt  ds_msgconv_config.yml  ds_nvdsanalytics_config.txt  ds_pgie_config.yml  ds_sgie_config.yml  ds_sgie_config_facenet.yml  ds_tracker_config.txt  faciallandmark_sgie_config.yml  main.cpp  msg_build.cpp  msg_build.h  multistream_utils.cpp  multistream_utils.h  nvdsanalytics_meta_utils.cpp  nvdsanalytics_meta_utils.h  pad_probe_utils.cpp  pad_probe_utils.h
